Rework 2034-spaces-in-SimpleName to run on RI.
This test uses a manually constructed Java class file. Previously a
custom build script transformed the class file into a DEX file using DX.
This broke the test on RI (as RI doesn't know about DEX files). Instead
of constructing the DEX file simply use the class file as test input.

Test: art/test/run-test --host       2034-spaces-in-SimpleName
Test: art/test/run-test --host --jvm 2034-spaces-in-SimpleName
Bug: 155151138
Bug: 154802847
Change-Id: I8d9e9b4622e279b2ee449b6ae063020192148884

--- a/test/2034-spaces-in-SimpleName/build
+++ b/test/2034-spaces-in-SimpleName/build
@@ -19,21 +19,10 @@ set -e -x
 
 export ASM_JAR="${ANDROID_BUILD_TOP}/prebuilts/misc/common/asm/asm-6.0.jar"
 
-cd src
-
 # generate Java bytecode with ASM
-${JAVAC:-java} -cp "$ASM_JAR:." SpacesInSimpleName.java
-${JAVA:-java} -cp "$ASM_JAR:." SpacesInSimpleName
-
-# compile Java bytecode to DEX bytecode
-# TODO: replace DX with D8 when it adds support for spaces in SimpleName
-# ${D8} --min-api 10000 Main.class
-$ANDROID_HOST_OUT/bin/dx --dex --output=classes.dex Main.class
-
-# move the resulting DEX file and cleanup
-mv classes.dex ../classes.dex
-rm *.class
-
+cd src_gen
+${JAVA:-java} -cp "$ASM_JAR:." SpacesInSimpleName.java
+mkdir ../classes && mv Main.class ../classes/Main.class
 cd ..
 
 # Use API level 10000 for spaces in SimpleName
